Add testing, minor fixes
